# Topological-Wind-Engineering

./: .gitignore  LICENSE  MANUSCRIPT_STATUS.md  README.md  SYNTHETIC_RESULTS.md  pyproject.toml  tda_utils.py
care_benchmark/: README.md  __init__.py  download.py  download_resilient.sh  load_care.py  metrics.py  models.py  run_benchmark.py  splits.py  windowing.py
config/: __init__.py  care_full.yaml  care_quick.yaml  default.yaml  load.py
seeing-around-corners-predicting-wind-turbine-regime-changes-through-topological-precursors/code/: 36_create_animation.py  36_regime_transitions_zigzag_blog_code.py  regime_transition.py
seeing-around-corners-predicting-wind-turbine-regime-changes-through-topological-precursors/content/: 36_regime_transitions_zigzag_blog.md
tests/: test_care_benchmark.py  test_config_load.py  test_regime_transition_samples.py  test_tda_utils.py
the-dance-of-turbines-detecting-coordinated-responses-in-wind-farms-using-path-homology/code/: 40_create_animation.py  40_farm_coordination_path_homology_blog_code.py  farm_coordination.py
the-dance-of-turbines-detecting-coordinated-responses-in-wind-farms-using-path-homology/content/: 40_farm_coordination_path_homology_blog.md
the-hidden-structure-of-wakes/code/: 35_create_animation.py  turbine_wake_detection.py
the-hidden-structure-of-wakes/content/: 35_topological_wake_detection_blog.md
the-texture-of-wind-machine-learning-on-topological-images-to-classify-turbulence/code/: 37_create_animation.py  37_turbulence_persistence_images_blog_code.py  turbulence_classification.py
(+30 files in other folders)
